--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <label class="block mb-2 font-medium">Upload Payment Screenshot</label>
   <input type="file" name="PaymentScreenshot" accept="image/*" required class="w-full p-2 border rounded mb-4" />
 
-  <p class="text-sm mb-2">Pay ₹50 to UPI ID: <strong>7730868656@axl</strong></p>
-  <img src="your-upi-qr.png" alt="UPI QR Code" class="w-40 h-40 mb-4" />
+  <p class="text-sm mb-2">Pay ₹50 to UPI ID: <strong>7730868656-2@axl</strong></p>
+<img src="PhonePeQR_Union Bank Of India - 21390.png" alt="UPI QR Code" class="w-40 h-40 mb-4 mx-auto" />
 
   <label class="block mb-2 font-medium">WhatsApp Number</label>
   <input type="tel" name="WhatsApp" required class="w-full p-2 border rounded mb-6" />
