--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 <body class="bg-gray-100 font-sans">
   <div class="max-w-xl mx-auto p-6 bg-white rounded-xl shadow-md mt-10">
     <h1 class="text-2xl font-bold mb-4 text-center text-green-600">Crickomania Quiz Registration</h1>
+    <!-- Register via Google Form Button -->
+<div class="text-center mb-4">
+  <a href="https://forms.gle/L6bHBxhtTdbu5CDC9" target="_blank">
+    <button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
+      Register via Google Form
+    </button>
+  </a>
+</div>
     <p class="text-sm mb-4 text-gray-700 text-center">Entry Fee: <strong>₹50</strong></p>
     <form action="https://formspree.io/f/your-form-id" method="POST" enctype="multipart/form-data">
       <label class="block mb-2 font-medium">Full Name</label>
