--- a/index.html
+++ b/index.html
@@ -8,44 +8,40 @@
 <body class="bg-gray-100 font-sans">
   <div class="max-w-xl mx-auto p-6 bg-white rounded-xl shadow-md mt-10">
     <h1 class="text-2xl font-bold mb-4 text-center text-green-600">Crickomania Quiz Registration</h1>
-    <!-- Register via Google Form Button -->
-<div class="text-center mb-4">
-  <a href="https://forms.gle/L6bHBxhtTdbu5CDC9" target="_blank">
-    <button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
-      Register via Google Form
-    </button>
-  </a>
-</div>
+
     <p class="text-sm mb-4 text-gray-700 text-center">Entry Fee: <strong>₹50</strong></p>
     <form action="https://formspree.io/f/your-form-id" method="POST" enctype="multipart/form-data">
       <label class="block mb-2 font-medium">Full Name</label>
-      <input type="text" name="Name" required class="w-full p-2 border rounded mb-4" /><label class="block mb-2 font-medium">College Name</label>
-  <input type="text" name="College" required class="w-full p-2 border rounded mb-4" />
+      <input type="text" name="Name" required class="w-full p-2 border rounded mb-4" />
 
-  <label class="block mb-2 font-medium">Phone Number</label>
-  <input type="tel" name="Phone" required class="w-full p-2 border rounded mb-4" />
+      <label class="block mb-2 font-medium">College Name</label>
+      <input type="text" name="College" required class="w-full p-2 border rounded mb-4" />
 
-  <label class="block mb-2 font-medium">Gender</label>
-  <select name="Gender" required class="w-full p-2 border rounded mb-4">
-    <option value="">Select</option>
-    <option value="Male">Male</option>
-    <option value="Female">Female</option>
-    <option value="Other">Other</option>
-  </select>
+      <label class="block mb-2 font-medium">Phone Number</label>
+      <input type="tel" name="Phone" required class="w-full p-2 border rounded mb-4" />
 
-  <label class="block mb-2 font-medium">Upload Payment Screenshot</label>
-  <input type="file" name="PaymentScreenshot" accept="image/*" required class="w-full p-2 border rounded mb-4" />
+      <label class="block mb-2 font-medium">Gender</label>
+      <select name="Gender" required class="w-full p-2 border rounded mb-4">
+        <option value="">Select</option>
+        <option value="Male">Male</option>
+        <option value="Female">Female</option>
+        <option value="Other">Other</option>
+      </select>
 
-  <p class="text-sm mb-2">Pay ₹50 to UPI ID: <strong>7730868656-2@axl</strong></p>
-<img src="PhonePeQR_Union Bank Of India - 21390.png" alt="UPI QR Code" class="w-40 h-40 mb-4 mx-auto" />
+      <label class="block mb-2 font-medium">Upload Payment Screenshot</label>
+      <input type="file" name="PaymentScreenshot" accept="image/*" required class="w-full p-2 border rounded mb-4" />
 
-  <label class="block mb-2 font-medium">WhatsApp Number</label>
-  <input type="tel" name="WhatsApp" required class="w-full p-2 border rounded mb-6" />
+      <p class="text-sm mb-2">Pay ₹50 to UPI ID: <strong>7730868656-2@axl</strong></p>
+      <img src="PhonePeQR_Union Bank Of India - 21390.png" alt="UPI QR Code" class="w-40 h-40 mb-4 mx-auto" />
 
-  <button type="submit" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 w-full">Submit Registration</button>
-</form>
-<p class="mt-4 text-center text-green-600 font-semibold">Thank you! We will contact you soon on WhatsApp.</p>
+      <label class="block mb-2 font-medium">WhatsApp Number</label>
+      <input type="tel" name="WhatsApp" required class="w-full p-2 border rounded mb-6" />
 
+      <button type="submit" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 w-full">Submit Registration</button>
+    </form>
+
+    <p class="mt-4 text-center text-green-600 font-semibold">Thank you! We will contact you soon on WhatsApp.</p>
   </div>
 </body>
 </html>
+
